examples/test/testpolicy15401.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15401
  namespace: namespace322
spec:
  podSelector:
    matchLabels:
      key31: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value47
      podSelector:
        matchLabels:
          key39: value13
          key6: value18
          key4: value11
